Removed redundent correlation matrix.

--- a/Stroke Risks.ipynb
+++ b/Stroke Risks.ipynb
@@ -131,12 +131,28 @@
     }
    ],
    "source": [
-    "# Visualize the graph.\n",
+    "# Visualize the correlations.\n",
     "import seaborn as sb\n",
     "import matplotlib.pyplot as plt\n",
     "plt.figure(figsize=(16,10))\n",
     "sb.heatmap(stroke_df.corr(), annot=True)"
    ]
+  },
+  {
+   "source": [
+    "### Quick analysis \n",
+    "\n",
+    "A quick glance shows that age seems to be the most correlated with having a stroke"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Prepare to build a supervised neural network model"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -172,7 +188,7 @@
   },
   {
    "source": [
-    "## Possible binning fields\n",
+    "### Possible binning fields\n",
     "\n",
     "- work_type"
    ],
@@ -767,49 +783,6 @@
    "source": [
     "# Save the model\n",
     "nn.save('resources/model/stroke_data_analysis.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "stroke                            1.000000\n",
-       "age                               0.245257\n",
-       "heart_disease                     0.134914\n",
-       "avg_glucose_level                 0.131945\n",
-       "hypertension                      0.127904\n",
-       "ever_married_Yes                  0.108340\n",
-       "smoking_status_formerly smoked    0.064556\n",
-       "work_type_Self-employed           0.062168\n",
-       "bmi                               0.042374\n",
-       "Residence_type_Urban              0.015458\n",
-       "work_type_Private                 0.011888\n",
-       "gender_Male                       0.009117\n",
-       "smoking_status_smokes             0.008939\n",
-       "work_type_Govt_job                0.002677\n",
-       "gender_Other                     -0.003166\n",
-       "smoking_status_never smoked      -0.004129\n",
-       "gender_Female                    -0.009027\n",
-       "work_type_Never_worked           -0.014882\n",
-       "Residence_type_Rural             -0.015458\n",
-       "smoking_status_Unknown           -0.055892\n",
-       "work_type_children               -0.083869\n",
-       "ever_married_No                  -0.108340\n",
-       "Name: stroke, dtype: float64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 18
-    }
-   ],
-   "source": [
-    "stroke_df.corr()['stroke']\\\n",
-    "    .sort_values(ascending=False)"
    ]
   },
   {
