Fixed file path issues due to folder reorg.

--- a/database_cleaning/stroke_data_etl.ipynb
+++ b/database_cleaning/stroke_data_etl.ipynb
@@ -58,7 +58,7 @@
     }
    ],
    "source": [
-    "stroke_df = pd.read_csv('resources/healthcare-dataset-stroke-data.csv')\n",
+    "stroke_df = pd.read_csv('../resources/healthcare-dataset-stroke-data.csv')\n",
     "stroke_df.head()"
    ]
   },
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "framingham_df = pd.read_csv('resources/framingham.csv')\n",
+    "framingham_df = pd.read_csv('../resources/framingham.csv')\n",
     "framingham_df.head()"
    ]
   },
@@ -452,7 +452,7 @@
    "outputs": [],
    "source": [
     "# Save to CSV for tableau\n",
-    "stroke_df.to_csv('resources/clean_stroke_data.csv')"
+    "stroke_df.to_csv('../resources/clean_stroke_data.csv')"
    ]
   },
   {
