--- a/machine_learning/framingham.ipynb
+++ b/machine_learning/framingham.ipynb
@@ -261,7 +261,7 @@
     }
    ],
    "source": [
-    "framingham_df = pd.read_csv(\"resources/framingham.csv\")\n",
+    "framingham_df = pd.read_csv(\"../resources/framingham.csv\")\n",
     "framingham_df.head()"
    ]
   },
@@ -677,7 +677,7 @@
    "outputs": [],
    "source": [
     "# Create a checkpoint of the model\n",
-    "checkpoint_filepath = 'resources/model/checkpoints/framingham.h5'\n",
+    "checkpoint_filepath = '../resources/model/checkpoints/framingham.h5'\n",
     "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
     "    filepath=checkpoint_filepath,\n",
     "    save_weights_only=True,\n",
@@ -1021,7 +1021,7 @@
    "outputs": [],
    "source": [
     "# Save the model\n",
-    "nn.save('resources/model/framingham.h5')"
+    "nn.save('../resources/model/framingham.h5')"
    ]
   },
   {
