--- a/machine_learning/Stroke Risks.ipynb
+++ b/machine_learning/Stroke Risks.ipynb
@@ -490,7 +490,7 @@
    "outputs": [],
    "source": [
     "# Create a checkpoint of the model\n",
-    "checkpoint_filepath = 'resources/model/checkpoints/stroke_data_analysis.h5'\n",
+    "checkpoint_filepath = '../resources/model/checkpoints/stroke_data_analysis.h5'\n",
     "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
     "    filepath=checkpoint_filepath,\n",
     "    save_weights_only=True,\n",
@@ -616,7 +616,7 @@
    "outputs": [],
    "source": [
     "# Save the model\n",
-    "nn.save('resources/model/stroke_data_analysis.h5')"
+    "nn.save('../resources/model/stroke_data_analysis.h5')"
    ]
   },
   {
